# Alien-Protocol

./: .env.example  .gitignore  ASSIGNMENT_COMPLETION.md  FINAL_PR_REPORT.md  MASTER_REFERENCE.md  PR_GENERATION_REPORT.md  PR_TEMPLATE.md  PULL_REQUEST_SUMMARY.md  README.md  TESTING_GUIDE.md  docker-compose.override.yml  docker-compose.yml  package-lock.json  package.json  tsconfig.json  validate-health-check.sh  validate-pr.sh
.github/workflows/: contract.yml  pre-commit-validation.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  package-lock.json  package.json  tsconfig.json
backend/auction/: auction-contract.client.ts  auction.controller.ts  auction.module.ts  auction.service.spec.ts  auction.service.ts
backend/auction/dto/: auction.dto.ts
backend/auction/entities/: auction.entity.ts
backend/src/: app.controller.spec.ts  app.module.ts  main.ts  soroban.service.ts
backend/src/auction/: auction.controller.ts  auction.module.ts
backend/src/auth/: auth.controller.spec.ts  auth.controller.ts  auth.module.ts
backend/src/config/: config.service.ts
backend/src/database/: data-source.ts  database.module.ts
backend/test/: auctions.e2e-spec.ts  validation.e2e-spec.ts  vault.e2e-spec.ts
contracts/collateral-vault/: Cargo.toml
contracts/oracle-adapter/: Cargo.toml
gateway-contract/: Cargo.minimal.toml  Cargo.toml  readme.md
gateway-contract/tests/: Cargo.toml
gateway-contract/tests/src/: lib.rs
onchain/: Cargo.toml  readme.md
onchain/tests/: Cargo.toml
scripts/: sample-deploy.ts  sample-run.ts  utils.ts
(+131 files in other folders)
